Fix hero text and footer align

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -9,14 +9,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  text-align: center;
+  align-items: center;
   padding-bottom: 3rem;
 }
 
 .hero__primary {
   font-family: $font-sub;
   text-transform: uppercase;
-  word-spacing: 100vh;
+  width: min-content;
   font-size: 4.2rem;
   text-align: center;
   padding-bottom: 1.5rem;
