--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -123,6 +123,7 @@ body {
   }
   .copy {
     width: 100%;
+    line-height: 2;
   }
   .love-components {
     padding-top: 1rem;
